<resources>
    <string name="app_name">Swoosh</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="dominate">dominate</string>
    <string name="find_a_team">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="todo">TODO</string>

    <string name="next">Next</string>

    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="coed">Co-ed</string>

    <string name="search_leagues_text">I am a</string>

    <string name="beginner">Beginnner</string>

    <string name="baller">Baller</string>

    <string name="finish">Finish</string>

    <string name="selected">Selected %1$s</string>
    <string name="league_undefined">League undefined!</string>
    <string name="skill_undefined">Skill undefined!</string>

    <!-- Looking for $league $skill league near you ... -->
    <string name="looking_for_skill">Looking for %1$s %2$s league near you …</string>
    <string name="i_am_a">I am a</string>

</resources>