<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SkillActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exercisebg"
        android:contentDescription="@string/baller" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="88dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/baller"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swooshlogo" />

    <TextView
        android:id="@+id/searchLeagueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/i_am_a"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/toggleButtonParent" />

    <LinearLayout
        android:id="@+id/toggleButtonParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="32dp">

        <ToggleButton
            android:id="@+id/toggleButtonBeginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/swoosh_toggle"
            android:checked="true"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/beginner"
            android:textColor="@android:color/white"
            android:textOff="@string/beginner"
            android:textOn="@string/beginner"
            android:onClick="onBeginnerClicked"
            android:textSize="@dimen/btn_toggle_font" />

        <ToggleButton
            android:id="@+id/toggleButtonBaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@drawable/swoosh_toggle"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/baller"
            android:textColor="@android:color/white"
            android:onClick="onBallerClicked"
            android:textOff="@string/baller"
            android:textOn="@string/baller"
            android:textSize="@dimen/btn_toggle_font" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_back"
        android:text="@string/finish"
        android:onClick="onSkillFinishedClicked"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/btn_nav_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>